# Bevy-Tests-2D

./: Cargo.toml  README.md  settings.json
src/: asset_loader.rs  asset_loader_player.rs  astroids.rs  camera.rs  character_asset_loader.rs  collision.rs  collission_detection.rs  debug.rs  despawn.rs  ecs_example.rs  entities.rs  health.rs  level.rs  main.rs  map_platforms.rs  movement.rs  movement_entity.rs  platform.rs  player.rs  player_input.rs  schedule.rs  spaceship.rs  sprite_animations.rs  state.rs  terain_asset_loader.rs
